# ira

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
configs/: restrict_config.yaml  restrict_silicon_config.yaml  train_config.yaml
src/codec/: __init__.py  audio_tokenizer.py  encodec_wrapper.py
src/data/: __init__.py  dataset.py
src/inference/: __init__.py
src/model/: __init__.py  audio_adapter.py  multimodal_wrapper.py  speech_lm.py  voice_encoder.py
src/training/: __init__.py  losses.py  rba_trainer.py
src/utils/: __init__.py  helpers.py  text_tokenizer.py
