[project]
name = "ira"
version = "0.1.0"
description = "Speech-based LLM Pipeline with Knowledge Distillation and Multimodal Integration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "encodec>=0.1.1",
    "accelerate>=0.24.0",
    "datasets>=2.14.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "librosa>=0.10.0",
    "soundfile>=0.12.0",
    "tokenizers>=0.15.0",
    "sentencepiece>=0.1.99",
    "phonemizer>=3.2.0",
    "tqdm>=4.66.0",
    "wandb>=0.16.0",
    "tensorboard>=2.15.0",
    "einops>=0.7.0",
    "timm>=0.9.0",
    "pydantic>=2.0.0",
    "omegaconf>=2.3.0",
    "hydra-core>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
